# template-py

./: .gitignore  pyproject.toml  readme.md  template.py
.github/workflows/: build.yml
tests/: template_tests.py
