[build-system]
requires = ["setuptools>=74", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
description = "a template processor"
readme = "readme.md"
dynamic = ["version"]
authors = [
    {name = "Pavlo Ivashkov"},
]
license = {file = "license"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing",
]

[project.urls]
homepage = "https://github.com/paiv/template-py"
source = "https://github.com/paiv/template-py"

[tool.setuptools]
